# Super-Mario-Clone-SDL2.0

./: CMakeLists.txt  README.md
assets/: intro  world1-2
include/: AnimationSystem.h  CallbackSystem.h  Components.h  ECS.h  EnemySystem.h  Game.h  MapSystem.h  PhysicsSystem.h  PlayerSystem.h  RenderSystem.h  ScoreSystem.h  SoundSystem.h  TextureManager.h  TileSystem.h  TileType.h  WinPointSystem.h
include/levels/: levelOne.h  levelOneIntro.h  levelTwo.h  levelTwoIntro.h  levels.h  start.h
src/: AnimationSystem.cpp  CallbackSystem.cpp  Collision.cpp  EnemySystem.cpp  Game.cpp  MapSystem.cpp  PhysicsSystem.cpp  PlayerSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  SoundManager.cpp  SoundSystem.cpp  TextureManager.cpp  TileSystem.cpp  WinPointSystem.cpp
src/levels/: levelOne.cpp  levelOneIntro.cpp  levelTwo.cpp  levelTwoIntro.cpp  start.cpp
